--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,10 @@
-lenguage: java
-jdk:
-  - openjdk11
+language: java
+sudo: true
+dist: trusty
+jdk: oraclejdk11
+addons:
+  apt:
+    packages:
+      - oracle-java11-installer
+before_install:
+  - chmod +x mvnw
