--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,6 @@
 language: java
 sudo: true
 dist: trusty
-jdk: oraclejdk11
-addons:
-  apt:
-    packages:
-      - oracle-java11-installer
+jdk: openjdk11
 before_install:
   - chmod +x mvnw
